5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1764_1185.log
== TEST (2019-05-28 23:39:40) 
-- CODE:
from numpy import*

nivelGlicose = array(eval(input("Nivel de Glicose no sangue: "))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:40:30) 
-- CODE:
from numpy import*

nivelGlicose = array(eval(input("Nivel de Glicose no sangue: "))
							
i = 0
n = 0
							
while(i < size(nivelGlicose)):
	if(nivelGlicose[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
							
print(n)
-- EXECUTION TIME:
0.154435
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 5
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:40:51) 
-- CODE:
from numpy import*

nivelGlicose = array(eval(input("Nivel de Glicose no sangue: ")))
							
i = 0
n = 0
							
while(i < size(nivelGlicose)):
	if(nivelGlicose[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
							
print(n)
-- EXECUTION TIME:
0.422564
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
